--- a/public/startbootstrap-landing-page-gh-pages/css/landing-page.css
+++ b/public/startbootstrap-landing-page-gh-pages/css/landing-page.css
@@ -1,37 +1,64 @@
-html,
-body, h1, h2, h3, h4, h5, h6 {
+/*
+ * Start Bootstrap - Landing Page (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
+
+body,
+html {
+    width: 100%;
+    height: 100%;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
-/* ========= INTRO =========*/
+.topnav {
+    font-size: 14px; 
+}
+
+.lead {
+    font-size: 18px;
+    font-weight: 400;
+}
+
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
-    background: url("cards.jpg") no-repeat center center;
+    text-align: center;
+    color: #f8f8f8;
+    background: url(../img/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .intro-message {
-	color: cyan;
     position: relative;
-    padding-top: 30%;
+    padding-top: 20%;
     padding-bottom: 20%;
 }
 
 .intro-message > h1 {
+    margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
 }
 
 .intro-divider {
-    width: 100%;
-    border-top: 1px solid DodgerBlue;
-    border-bottom: 1px solid DodgerBlue;
+    width: 400px;
+    border-top: 1px solid #f8f8f8;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-.intro-social-buttons a {
-	background-color: cyan;
+.intro-message > h3 {
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
 @media(max-width:767px) {
@@ -44,7 +71,7 @@ body, h1, h2, h3, h4, h5, h6 {
     }
 
     ul.intro-social-buttons > li {
-        display: inline-block;
+        display: block;
         margin-bottom: 20px;
         padding: 0;
     }
@@ -95,7 +122,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .banner h2 {
     margin: 0;
-
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 3em;
 }
 
