--- a/public/p_website.css
+++ b/public/p_website.css
@@ -1,3 +1,4 @@
+/* ========= MAIN =========*/
 html,
 body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -5,13 +6,15 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 /* ========= INTRO =========*/
+/* intro background image */
 .intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-top: 50px;
     padding-bottom: 50px;
     background: url("cards.jpg") no-repeat center center;
     background-size: cover;
 }
 
+/* container for name bar and buttons */
 .intro-message {
 	color: cyan;
     position: relative;
@@ -19,17 +22,21 @@ body, h1, h2, h3, h4, h5, h6 {
     padding-bottom: 20%;
 }
 
+/* name */
 .intro-message > h1 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 5em;
+	font-family: Papyrus,fantasy;
+	font-size: 90px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);   
 }
 
+/* dividing line */
 .intro-divider {
     width: 100%;
     border-top: 1px solid DodgerBlue;
     border-bottom: 1px solid DodgerBlue;
 }
 
+/* connect buttons */
 .intro-social-buttons a {
 	background-color: cyan;
 }
@@ -40,7 +47,7 @@ body, h1, h2, h3, h4, h5, h6 {
     }
 
     .intro-message > h1 {
-        font-size: 3em;
+        font-size: 4em;
     }
 
     ul.intro-social-buttons > li {
@@ -57,6 +64,9 @@ body, h1, h2, h3, h4, h5, h6 {
         width: 100%;
     }
 }
+
+
+
 
 .network-name {
     text-transform: uppercase;
