--- a/public/p_website.css
+++ b/public/p_website.css
@@ -151,8 +151,21 @@ body, h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
+/* ========= GITHUB ========= */
+#gitInfo {
 
+    width: 25%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: center;
+    float: left;
+    background: rgba(0, 0, 0, 0.8);
+    color: aliceblue;
+}
 
+span {
+    font-weight: lighter;
+}
 
 
 
