--- a/public/p_website.css
+++ b/public/p_website.css
@@ -153,14 +153,18 @@ body, h1, h2, h3, h4, h5, h6 {
 
 /* ========= GITHUB ========= */
 #gitInfo {
-
+    height: 252px;
     width: 25%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 3%;
+    /*padding-bottom: 2%;*/
+    /*padding-left: 5px;*/
+    padding-right: 5px;
     text-align: center;
     float: left;
     background: rgba(0, 0, 0, 0.8);
     color: aliceblue;
+    font-weight: lighter;
+    /*border: 2px solid red;*/
 }
 
 span {
