--- a/public/p_website.css
+++ b/public/p_website.css
@@ -111,7 +111,7 @@ body, h1, h2, h3, h4, h5, h6 {
 .divider {
 	border: 3px solid #721817;
 	width: 40%;
-	margin-bottom: 2%;
+	margin-bottom: 6%;
 }
 
 #bio {
@@ -134,7 +134,7 @@ body, h1, h2, h3, h4, h5, h6 {
 .divider2 {
 	border: 3px solid #721817;
 	width: 40%;
-	margin-bottom: 2%;
+	margin-bottom: 6%;
 	margin-left: 60%;
 }
 
@@ -180,6 +180,16 @@ body, h1, h2, h3, h4, h5, h6 {
 span {
     font-weight: lighter;
 }
+
+#github {
+    background-image: url("/swirl.png");
+}
+
+
+
+
+
+
 
 
 
