--- a/public/magic_eight/magic_eight.css
+++ b/public/magic_eight/magic_eight.css
@@ -7,31 +7,46 @@ body {
 img {
 	box-shadow:0 0 5px green,0 0 8px #fff,0 0 12px #fff,0 0 30px blue,0 0 40px white;
 	border-radius: 50%;
-	margin-top: 5%;
-	margin-bottom: 5%;
+	margin-top: 8%;
 	position: relative;
+	width: 250px;
+
 }
 
 #answer {
-	position: absolute;
-	left: 0;
-	text-align: center;
-	top: 47%;
 	width: 100%;
 }
 
-/* FULL SCREEN */
-@media(max-width:375px) {
-	#answer {
-		position: absolute;
-		margin-top: 100%;
-	}
+
+@-webkit-keyframes spaceboots {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-/* PHONE SCREEN */
-@media(max-width:1440px) {
-	#answer {
-		position: absolute;
-		margin-top: 1%;
-	}
+#first:hover {
+	-webkit-animation-name: spaceboots;
+	-webkit-animation-duration: 1s;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: 1;
+	-webkit-animation-timing-function: linear;
+}
+
+/* FLEXBOX WILL ADJUST THE AREA OF THE BOX DEPENDING ON SCREEN SIZE */
+.flex-container {
+	font-size: 1em;
+	/* ALIGNS TEXT IN THE CENTER OF THE FLEXBOX */
+	-webkit-justify-content: center;
+	/* puts answer in the middle of the ball */
+	margin-top: -18vh;
+	position: absolute;
+	text-align: center;
 }
