--- a/public/magic_eight/magic_eight.css
+++ b/public/magic_eight/magic_eight.css
@@ -36,27 +36,36 @@ img {
 
 /* FLEXBOX WILL ADJUST THE AREA OF THE BOX DEPENDING ON SCREEN SIZE */
 #answer {
-	width: 80px;
+	width: 100%;
 	/* ALIGNS TEXT IN THE CENTER OF THE FLEXBOX */
-	-webkit-justify-content: center;
+	/*-webkit-justify-content: center;*/
 	margin-top: -180px;
-	margin-left: 40%;
+	/*margin-left: 0px;*/
+	right: 0px;
 	position: relative;
 	text-align: center;
+
+	border: 1px solid red;
+	height: 80px;
 }
 
-@media screen and (min-width: 768px){
-	#answer {
-		margin-left: 45%;
-	}
-}
-
-@media screen and (min-width: 1025px){
+/*@media screen and (max-width: 720px){
 	#answer {
 		margin-left: 46%;
 	}
 }
 
+@media screen and (min-width: 721px){
+	#answer {
+		margin-left: 46%;
+	}
+}*/
+
+.container {
+	border: 1px solid yellow;
+	position: relative;
+}
+/*
 @media screen and (min-width: 1440px){
 	#answer {
 		margin-left: 46.5%;
@@ -73,5 +82,5 @@ img {
 	#answer {
 		margin-left: 45%;
 	}
-}
+}*/
 
