--- a/public/p_website.css
+++ b/public/p_website.css
@@ -120,6 +120,8 @@ body, h1, h2, h3, h4, h5, h6 {
     background: rgba(119, 136, 153, 0.4);
     text-align: center;
     border: 2px solid #721817;
+    padding: 3%;
+    height: 30%;
 }
 
 /* ========= CODE ========= */
